# webviz-rust-framework

./: .gitignore  .ignore  Cargo.toml  DEPENDENT-LICENSES  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml  sync-to-open-source-repo.sh  workspace.code-workspace
wrflib/cargo-wrflib/: Cargo.toml
wrflib/cargo-wrflib/src/: install_deps.rs  main.rs
wrflib/components/: Cargo.toml
wrflib/components/src/: arrow_pointer.rs  axis.rs  background.rs  button.rs  buttonlogic.rs  chart.rs  checkbox.rs  desktopbutton.rs  desktopwindow.rs  dock.rs  drawpoints3d.rs  floatslider.rs  foldcaption.rs  geometry3d.rs  lib.rs  list.rs  listlogic.rs  popover.rs  scrollbar.rs  scrollview.rs  skybox.rs  splitter.rs  tab.rs  tabclose.rs  tabcontrol.rs  textbuffer.rs  texteditor.rs  textinput.rs  tokentype.rs  viewport3d.rs
wrflib/components/src/internal/: buttonlogic.rs  desktopbutton.rs  scrollbar.rs  tabclose.rs
wrflib/examples/example_bigedit/: Cargo.toml  index.html
wrflib/examples/example_bigedit/http/: Cargo.toml
wrflib/examples/example_bigedit/http/src/: digest.rs  httputil.rs  lib.rs  websocket.rs
wrflib/examples/example_bigedit/hub/: Cargo.toml
wrflib/examples/example_bigedit/hub/src/: httpserver.rs  hubmsg.rs  hubrouter.rs  hubserver.rs  hubui.rs  lib.rs  wasmstrip.rs
wrflib/examples/example_bigedit/microserde/: Cargo.toml
wrflib/examples/example_bigedit/microserde/derive/: Cargo.toml
wrflib/examples/example_bigedit/microserde/src/: lib.rs
wrflib/examples/example_bigedit/src/: builder.rs  buildmanager.rs  codeicon.rs  colorpicker.rs  fieldworld.rs  fileeditor.rs  filepanel.rs  filetree.rs  homepage.rs  itemdisplay.rs  jseditor.rs  keyboard.rs  listanims.rs  loglist.rs  makepadapp.rs  makepadstorage.rs  makepadwindow.rs  mprstokenizer.rs  plaineditor.rs  rusteditor.rs  searchindex.rs  searchresults.rs  treeworld.rs  worldview.rs
wrflib/examples/shader_editor/: Cargo.toml  index.html
wrflib/examples/shader_editor/src/: main.rs
wrflib/examples/test_geometry/: Cargo.toml  index.html
wrflib/examples/test_geometry/src/: main.rs
wrflib/examples/test_padding/: Cargo.toml  index.html
wrflib/examples/test_padding/src/: main.rs
wrflib/examples/test_shader_2d_primitives/: Cargo.toml
wrflib/examples/test_shader_2d_primitives/src/: main.rs
wrflib/main/: Cargo.toml  README.md
wrflib/main/bind/cef-sys/: Cargo.toml  README.md  build.rs
wrflib/main/bind/cef-sys/src/: lib.rs
wrflib/main/bind/glx-sys/: Cargo.toml  README.md  build.rs
wrflib/main/bind/objc-sys/: Cargo.toml  README.md  build.rs
wrflib/main/bind/objc-sys/src/: declare.rs  encode.rs  exception.rs  lib.rs  macros.rs  malloc_buf.rs  runtime.rs  test_utils.rs
wrflib/main/bind/objc-sys/src/message/: mod.rs  (+2 more)
wrflib/main/bind/x11-sys/: Cargo.toml  README.md  build.rs
wrflib/main/bind/x11-sys/src/: lib.rs
wrflib/main/cef/: Cargo.toml  README.md
wrflib/main/cef/src/: browser.rs  browser_host.rs  frame.rs  lib.rs  menu_model.rs  process_message.rs  ptr.rs  settings.rs  thread.rs  v8.rs  window.rs
wrflib/main/cef/src/app/: browser_process_handler.rs  command_line.rs  mod.rs  render_process_handler.rs
wrflib/main/cef/src/client/: context_menu_handler.rs  display_handler.rs  life_span_handler.rs  mod.rs  render_handler.rs  request.rs  request_handler.rs  resource_handler.rs  resource_request_handler.rs  response.rs
wrflib/main/cef/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
wrflib/main/cef/src/types/: color.rs  mod.rs  point.rs  range.rs  rect.rs  size.rs  string.rs
wrflib/main/shader_compiler/: Cargo.toml  README.md
wrflib/main/shader_compiler/src/: analyse.rs  builtin.rs  code_fragment.rs  const_eval.rs  const_gather.rs  dep_analyse.rs  detok.rs  env.rs  error.rs  generate.rs  generate_glsl.rs  generate_hlsl.rs  generate_metal.rs  generate_shader_ast.rs  ident.rs  lex.rs  lhs_check.rs  lib.rs  lit.rs  math.rs  shaderast.rs  shaderparser.rs  span.rs  swizzle.rs  token.rs  ty.rs  ty_check.rs  util.rs  val.rs
wrflib/main/shader_compiler/tests/: test.rs
wrflib/main/src/: animator.rs  area.rs  byte_extract.rs  cast.rs  cef_browser.rs  cef_utils.rs  colors.rs  component_base.rs  component_id.rs  cube_ins.rs  cursor.rs  cx.rs  cx_app_load.rs  cx_apple.rs  cx_cocoa.rs  cx_desktop.rs  cx_dx11.rs  cx_linux.rs  cx_macos.rs  cx_metal.rs  cx_opengl.rs  cx_wasm32.rs  cx_web.rs  cx_webgl.rs  cx_win32.rs  cx_windows.rs  cx_xlib.rs  debug_log.rs  debugger.rs  draw_tree.rs  events.rs  fonts.rs  geometry.rs  hash.rs  image_ins.rs  layout.rs  layout_api.rs  layout_internal.rs  lib.rs  macros.rs  (+19 more)
wrflib/main/vector/: Cargo.toml  README.md
wrflib/main/vector/src/: lib.rs
wrflib/main/vector/src/font/: font.rs  glyph.rs  horizontal_metrics.rs  mod.rs  outline.rs  outline_point.rs
wrflib/main/vector/src/geometry/: affine_transformation.rs  f32_ext.rs  line_segment.rs  linear_transformation.rs  mod.rs  point.rs  quadratic_segment.rs  rectangle.rs  transform.rs  transformation.rs  trapezoid.rs  vector.rs
wrflib/main/vector/src/internal_iter/: extend_from_internal_iterator.rs  from_internal_iterator.rs  internal_iterator.rs  into_internal_iterator.rs  mod.rs
wrflib/main/vector/src/path/: line_path.rs  line_path_command.rs  line_path_iterator.rs  mod.rs  path.rs  path_command.rs  path_iterator.rs
wrflib/main/vector/src/trapezoidator/: mod.rs
wrflib/main/vector/src/ttf_parser/: mod.rs
wrflib/test_suite/: Cargo.toml  index.html
wrflib/test_suite/src/: main.rs
wrflib/widget/: Cargo.toml  README.md
wrflib/widget/src/: arrow_pointer.rs  background.rs  button.rs  chart.rs  checkbox.rs  desktopbutton.rs  desktopwindow.rs  dock.rs  drawlines3d.rs  drawpoints3d.rs  floatslider.rs  foldcaption.rs  fps_counter.rs  lib.rs  listlogic.rs  normalbutton.rs  popover.rs  scrollbar.rs  scrollshadow.rs  scrollview.rs  skybox.rs  splitter.rs  tab.rs  tabclose.rs  tabcontrol.rs  textbuffer.rs  textcursor.rs  texteditor.rs  textinput.rs  time_based_chart.rs  tokentype.rs  tracking_viewport3d.rs  viewport3d.rs
wrflib/wrflib_wasm_thread_xform/: Cargo.toml
wrflib/wrflib_wasm_thread_xform/src/: main.rs
(+257 files in other folders)
