# Copyright (c) 2021-present, Cruise LLC
#
# This source code is licensed under the Apache License, Version 2.0,
# found in the LICENSE-APACHE file in the root directory of this source tree.
# You may not use this file except in compliance with the License.

[workspace]
resolver = "2"

members = [
    "wrflib/examples/bigedit",
    "wrflib/examples/bare_example",
    "wrflib/examples/layout_example",
    "wrflib/examples/multithread_example",
    "wrflib/examples/popover_example",
    "wrflib/examples/shader_editor",
    "wrflib/examples/widget_example",
    "wrflib/test_suite",
]
