[package]
name = "cargo-wrflib"
version = "0.0.6"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/cruise-automation/webviz-rust-framework"
repository = "https://github.com/cruise-automation/webviz-rust-framework"
description = "Cargo extensions for WRFLib"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
