# Copyright (c) 2021-present, Cruise LLC
#
# This source code is licensed under the Apache License, Version 2.0,
# found in the LICENSE-APACHE file in the root directory of this source tree.
# You may not use this file except in compliance with the License.

[package]
name = "wrflib_components"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/cruise-automation/webviz-rust-framework"
repository = "https://github.com/cruise-automation/webviz-rust-framework"
readme = "README.md"
description = "The widget toolkit for Wrflib"

[dependencies]
wrflib = { path="../main", version = "0.0.3" }
