# Copyright (c) 2021-present, Cruise LLC
#
# This source code is licensed under the Apache License, Version 2.0,
# found in the LICENSE-APACHE file in the root directory of this source tree.
# You may not use this file except in compliance with the License.

[package]
name = "test_suite"
version = "0.0.1"
edition = "2021"
publish = false

[features]
# Note that you can also use wrflib-specific features directly, e.g. `wrflib/cef-debug`.

[target.'cfg(target_arch = "wasm32")'.dependencies]
wrflib = { path="../main" }
wrflib_components = { path="../components" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wrflib = { path="../main", features=["cef"] }
wrflib_components = { path="../components" }


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
