# Copyright (c) 2021-present, Cruise LLC
#
# This source code is licensed under the Apache License, Version 2.0,
# found in the LICENSE-APACHE file in the root directory of this source tree.
# You may not use this file except in compliance with the License.

[package]
name = "wrflib_wasm_thread_xform"
version = "0.0.1"
edition = "2018"

[dependencies]
wasm-bindgen-threads-xform = "0.2.75"
walrus = "0.19.0"
anyhow = "1.0"
regex = "1"
filetime = "0.2"
