# Copyright (c) 2021-present, Cruise LLC
#
# This source code is licensed under the Apache License, Version 2.0,
# found in the LICENSE-APACHE file in the root directory of this source tree.
# You may not use this file except in compliance with the License.

[package]
name = "example_bigedit"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
wrflib = { path="../../main" }
wrflib_widget = { path="../../widget" }
bigedit_http = { path="http" }
bigedit_microserde = { path="microserde" }
bigedit_hub = { path="hub" }
