# Copyright (c) 2021-present, Cruise LLC
#
# This source code is licensed under the Apache License, Version 2.0,
# found in the LICENSE-APACHE file in the root directory of this source tree.
# You may not use this file except in compliance with the License.

[package]
name = "test_geometry"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]

[dependencies.wrflib]
path="../../main"

[dependencies.wrflib_widget]
path="../../widget"
