# Copyright (c) 2021-present, Cruise LLC
#
# This source code is licensed under the Apache License, Version 2.0,
# found in the LICENSE-APACHE file in the root directory of this source tree.
# You may not use this file except in compliance with the License.

[package]
name = "test_shader_2d_primitives"
version = "0.0.1"
edition = "2021"
publish = false

[features]
cef=["wrflib/cef"] # Enable native browser support through CEF; experimental!
cef-server=["wrflib/cef-server"] # Serve web files from the application bundle

[dependencies]
wrflib = { path="../../main" }
wrflib_components = { path="../../components" }

