[package]
name = "wrflib_cef"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/cruise-automation/webviz-rust-framework"
repository = "https://github.com/cruise-automation/webviz-rust-framework"
description = "CEF helpers for Wrflib"

[features]
debug=["wrflib_cef_sys/debug"] # Use a debug build of CEF instead of a release build. Useful for its assertions!

[dependencies]
widestring = "0.4.0"

[dependencies.wrflib_cef_sys]
path="../bind/cef-sys"
version = "0.0.3"
