[package]
name = "wrflib_vector"
version = "0.0.1"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/cruise-automation/webviz-rust-framework"
repository = "https://github.com/cruise-automation/webviz-rust-framework"
readme = "README.md"
description = "The vector library for Wrflib"
