[package]
name = "wrflib_cef_sys"
version = "0.0.1"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/janpaul123/wrflib"
repository = "https://github.com/janpaul123/wrflib"
readme = "README.md"
description = "The CEF bindings for Wrf"
build = "build.rs"
links = "cef"

[features]
debug=[] # Use a debug build of CEF instead of a release build. Useful for its assertions!

[dependencies]

[build-dependencies]
fs_extra = "1.1"
bindgen = "0.59"
