[package]
name = "wrflib_glx_sys"
version = "0.0.1"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/cruise-automation/webviz-rust-framework"
repository = "https://github.com/cruise-automation/webviz-rust-framework"
readme = "README.md"
description = "The glx bindings for Wrflib"
