[package]
name = "wrflib_glx_sys"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/cruise-automation/webviz-rust-framework"
repository = "https://github.com/cruise-automation/webviz-rust-framework"
readme = "README.md"
description = "The glx bindings for Wrflib"
