# Forked from http://github.com/SSheldon/rust-objc
[package]
name = "wrflib_objc_sys"
version = "0.0.1"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/janpaul123/wrflib"
repository = "https://github.com/janpaul123/wrflib"
readme = "README.md"
description = "The Objective-C bindings for Wrf"

[dev-dependencies]
libc = "0.2"
